# image_convert

./: .gitignore  main.py  pyproject.toml  template.html
.trae/rules/: project_rules.md
backend/: api.py  app.py  tools.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/component/: Imagelist.vue  Sidebar.vue
frontend/src/stores/: imageStore.js
